k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: workshop-app
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 3000
      targetPort: http
